--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^24.0.4",
     "axios": "^1.10.0",
     "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
@@ -32,9 +33,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "2.8.17",
     "@types/express": "5.0.1",
-    "@types/jest": "29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "24.0.4",
     "@typescript-eslint/eslint-plugin": "8.29.1",
     "@typescript-eslint/parser": "8.29.1",
     "eslint": "8.57.0",
